# local-monitoring

./: LEIA_ME.txt  MANUAL_DE_RODAGEM.txt  README.md
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
backend/urban_local/: asgi.py  settings.py  urls.py  wsgi.py
backend/weather/: models.py  reports.py  serializers.py  services.py  urls.py  views.py
backend/weather/migrations/: 0001_initial.py
eco_sight/: .env  pubspec.yaml
eco_sight/lib/: main.dart
eco_sight/lib/data/models/: clima_model.dart
eco_sight/lib/data/services/: api_service.dart
eco_sight/lib/screens/: clima_screen.dart  dashboard_screen.dart  mapa_screen.dart
eco_sight/lib/screens/providers/: clima_provider.dart
eco_sight/windows/runner/: main.cpp
frontend/: .env  README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/data/models/: clima_model.dart  poluicao_model.dart
frontend/lib/data/services/: api_service.dart  location_service.dart
frontend/lib/screens/: clima_screen.dart  dashboard_screen.dart  mapa_screen.dart
frontend/lib/screens/providers/: clima_provider.dart  mapa_provider.dart
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc
(+4 files in other folders)
